.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:39:02 **** Clean-only build of configuration Debug for project hello_world_semihosting ****
make -j4 clean 
rm -rf ./Startup/startup_stm32f303retx.d ./Startup/startup_stm32f303retx.o
rm -rf ./Src/main.cyclo ./Src/main.d ./Src/main.o ./Src/main.su ./Src/syscalls.cyclo ./Src/syscalls.d ./Src/syscalls.o ./Src/syscalls.su ./Src/sysmem.cyclo ./Src/sysmem.d ./Src/sysmem.o ./Src/sysmem.su
rm -rf default.size.stdout hello_world.elf hello_world.list hello_world.map
 
17:39:03 **** Build of configuration Debug for project hello_world_semihosting ****
make -j4 all 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f303retx.d" -MT"Startup/startup_stm32f303retx.o" --specs=nano.specs -mfloat-abi=hard -mthumb -o "Startup/startup_stm32f303retx.o" "../Startup/startup_stm32f303retx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F3 -DSTM32F303RETx -DNUCLEO_F303RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F3 -DSTM32F303RETx -DNUCLEO_F303RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=hard -mthumb -o "Src/sysmem.o"
arm-none-eabi-gcc -o "hello_world_semihosting.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/patryk/Desktop/course_arm_cortex/hello_world_semihosting/STM32F303RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="hello_world_semihosting.map" -Wl,--gc-sections -static -specs=rdimon.specs -lc -lrdimon --specs=nano.specs -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: hello_world_semihosting.elf
 
arm-none-eabi-size   hello_world_semihosting.elf 
arm-none-eabi-objdump -h -S  hello_world_semihosting.elf  > "hello_world_semihosting.list"
   text	   data	    bss	    dec	    hex	filename
   4868	    116	   1756	   6740	   1a54	hello_world_semihosting.elf
Finished building: default.size.stdout
Finished building: hello_world_semihosting.list
 
 
17:39:49 **** Incremental Build of configuration Debug for project hello_world_semihosting ****
make -j4 all 
arm-none-eabi-size   hello_world_semihosting.elf 
   text	   data	    bss	    dec	    hex	filename
   4868	    116	   1756	   6740	   1a54	hello_world_semihosting.elf
Finished building: default.size.stdout
 
17:43:11 **** Incremental Build of configuration Debug for project hello_world_semihosting ****
make -j4 all 
arm-none-eabi-size   hello_world_semihosting.elf 
   text	   data	    bss	    dec	    hex	filename
   4868	    116	   1756	   6740	   1a54	hello_world_semihosting.elf
Finished building: default.size.stdout
 
23:39:30 **** Build of configuration Debug for project operation_modes ****
make -j4 all 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f303retx.d" -MT"Startup/startup_stm32f303retx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Startup/startup_stm32f303retx.o" "../Startup/startup_stm32f303retx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F3 -DSTM32F303RETx -DNUCLEO_F303RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F3 -DSTM32F303RETx -DNUCLEO_F303RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F3 -DSTM32F303RETx -DNUCLEO_F303RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/sysmem.o"
../Src/syscalls.c: In function 'ITM_SendChar':
../Src/syscalls.c:47:2: error: 'DEMCR' undeclared (first use in this function)
   47 |  DEMCR |= ( 1 << 24);
      |  ^~~~~
../Src/syscalls.c:47:2: note: each undeclared identifier is reported only once for each function it appears in
../Src/syscalls.c:50:2: error: 'ITM_TRACE_EN' undeclared (first use in this function)
   50 |  ITM_TRACE_EN |= ( 1 << 0);
      |  ^~~~~~~~~~~~
../Src/syscalls.c:53:10: error: 'ITM_STIMULUS_PORT0' undeclared (first use in this function)
   53 |  while(!(ITM_STIMULUS_PORT0 & 1));
      |          ^~~~~~~~~~~~~~~~~~
make: *** [Src/subdir.mk:25: Src/syscalls.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j4 all" terminated with exit code 2. Build might be incomplete.
23:41:12 **** Incremental Build of configuration Debug for project operation_modes ****
make -j4 all 
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F3 -DSTM32F303RETx -DNUCLEO_F303RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/syscalls.o"
../Src/syscalls.c: In function 'ITM_SendChar':
../Src/syscalls.c:47:2: error: 'DEMCR' undeclared (first use in this function)
   47 |  DEMCR |= ( 1 << 24);
      |  ^~~~~
../Src/syscalls.c:47:2: note: each undeclared identifier is reported only once for each function it appears in
../Src/syscalls.c:50:2: error: 'ITM_TRACE_EN' undeclared (first use in this function)
   50 |  ITM_TRACE_EN |= ( 1 << 0);
      |  ^~~~~~~~~~~~
../Src/syscalls.c:53:10: error: 'ITM_STIMULUS_PORT0' undeclared (first use in this function)
   53 |  while(!(ITM_STIMULUS_PORT0 & 1));
      |          ^~~~~~~~~~~~~~~~~~
make: *** [Src/subdir.mk:25: Src/syscalls.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.
23:42:04 **** Incremental Build of configuration Debug for project operation_modes ****
make -j4 all 
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F3 -DSTM32F303RETx -DNUCLEO_F303RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc -o "operation_modes.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/patryk/Desktop/course_arm_cortex/operation_modes/STM32F303RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="operation_modes.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: operation_modes.elf
 
arm-none-eabi-size   operation_modes.elf 
arm-none-eabi-objdump -h -S  operation_modes.elf  > "operation_modes.list"
   text	   data	    bss	    dec	    hex	filename
   3944	    108	   1588	   5640	   1608	operation_modes.elf
Finished building: default.size.stdout
Finished building: operation_modes.list
 
 
23:42:28 **** Incremental Build of configuration Debug for project operation_modes ****
make -j4 all 
arm-none-eabi-size   operation_modes.elf 
   text	   data	    bss	    dec	    hex	filename
   3944	    108	   1588	   5640	   1608	operation_modes.elf
Finished building: default.size.stdout
 
23:44:27 **** Incremental Build of configuration Debug for project operation_modes ****
make -j4 all 
arm-none-eabi-size   operation_modes.elf 
   text	   data	    bss	    dec	    hex	filename
   3944	    108	   1588	   5640	   1608	operation_modes.elf
Finished building: default.size.stdout
 
00:16:47 **** Incremental Build of configuration Debug for project operation_modes ****
make -j4 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F3 -DSTM32F303RETx -DNUCLEO_F303RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "operation_modes.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/patryk/Desktop/course_arm_cortex/operation_modes/STM32F303RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="operation_modes.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: operation_modes.elf
 
arm-none-eabi-size   operation_modes.elf 
arm-none-eabi-objdump -h -S  operation_modes.elf  > "operation_modes.list"
   text	   data	    bss	    dec	    hex	filename
   3944	    108	   1588	   5640	   1608	operation_modes.elf
Finished building: default.size.stdout
 
Finished building: operation_modes.list
 
